# Text-To-Ableton12

./: .gitignore  Echo-parameter_dump.txt  Operator-parameter_dump.txt  README.md  Reverb-parameter_dump.txt  analog_rack.xml  app.py  custom_device_manual.md  ollama_debug_log.txt  prompt_output.txt  prompt_output_mocked.txt  requirements.txt  start_app.bat
backend/: README - backend.md  README.md  build_catalog.py  device_catalog.json  exceptions.py  extract_device_schemas.py  gemini_client.py  logger.py  main.py  mcp_proxy.py  pyproject.toml  schema.py  scratch_catalog.py  scratch_token_test.py  scratch_toon.py  session_manager.py  test_build_catalog.py  test_gemini_client.py  test_mcp_fetch.py  test_schema.py  test_supervisor.py  test_worker_agent.py
backend/data/factory_racks/Audio_Effect_Rack/: AI_Archetype_Delay.adg  AI_Archetype_Drum_Buss.adg  AI_Archetype_EQ_Eight.adg  AI_Archetype_Echo.adg  AI_Archetype_Glue_Compressor.adg  AI_Archetype_Reverb.adg  AI_Archetype_Saturator.adg  AI_Archetype_Utility.adg
backend/data/factory_racks/Instrument_Rack/: AI_Archetype_Analog.adg  AI_Archetype_Drift.adg  AI_Archetype_Operator.adg  AI_Archetype_Wavetable.adg
backend/data/sessions/: c45256de-4fbe-4954-b082-0cba42bd3ef9.json
backend/gemini/: __init__.py  planner.py  retriever.py  tools.py
frontend/: README.md  index.html  main.js  package-lock.json  package.json  preload.js  renderer.js  styles.css
project_docs/: AI_prompt_20260426_0910.md  AI_prompt_20260426_1928.md  Architecture Evolution_ Hybrid Cloud_Local Pipeline.md  LLM Architectures for Music AI.md  (+15 more)
(+26 files in other folders)
